# dosypator

./: .gitignore  README.md  partitions.csv  sdkconfig
firmware/: CMakeLists.txt  idf_component.yml  partitions.csv  sdkconfig
firmware/.github/: copilot-instructions.md
firmware/main/: CMakeLists.txt  dosypator_model.tflite  local_kiss_fft.c  local_kiss_fft.h  local_kiss_fft_guts.h  local_kiss_fftr.c  local_kiss_fftr.h  main.cpp
firmware/tools/: extract_model_from_header.py
main/: CMakeLists.txt  captive_portal.cpp  captive_portal.h  main.cpp
main/web/: index.html
ml-training/: convert_to_tflite.py  extract_features.py  mfcc_stats.npy  predict.py  test_audio.py
